; ModuleID = '/home/carl/AnghaBench/FFmpeg/tests/api/extr_api-threadmessage-test.c_free_frame.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tests/api/extr_api-threadmessage-test.c_free_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.message = type { i64, i32 }

@MAGIC = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @free_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_frame(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.message*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.message*
  store %struct.message* %5, %struct.message** %3, align 8
  %6 = load %struct.message*, %struct.message** %3, align 8
  %7 = getelementptr inbounds %struct.message, %struct.message* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @MAGIC, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @av_assert0(i32 %11)
  %13 = load %struct.message*, %struct.message** %3, align 8
  %14 = getelementptr inbounds %struct.message, %struct.message* %13, i32 0, i32 1
  %15 = call i32 @av_frame_free(i32* %14)
  ret void
}

declare dso_local i32 @av_assert0(i32) #1

declare dso_local i32 @av_frame_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
